--- a/TODO
+++ b/TODO
@@ -10,20 +10,23 @@
   [X] Develop a clever Printable class usable for diff. types of data (value, retrieval)
   [X] Test the output module (list songs, current playlist, given playlist)
   [X] More features in output (selection, counter column, align, zero-count of songs in playlist)
-  [*] Develop pattern representation
-  [ ] Pattern parsing into the representation
+  [X] Develop pattern representation
+  [+] Pattern parsing into the representation
+  [ ] Command-line arguments to the program parsed as commands
 R [ ] Pattern testing with medialib (info, enqueue)
+R [ ] More commands (remove, status, clear, playlist-shuffle, filter)
+  [ ] Make readline use async, redesign main-loop, remove waits
   [ ] Brainstorm on abstraction layer, make it reliable, dynamic (broadcast, etc)
-R [ ] Design proper abstraction layer (async events [threads?], current PL, collections)
+R [ ] Design proper abstraction layer (all async events, current PL, collections)
   [ ] Develop collection handling and classes
   [ ] Save collections in a file (apply, save as, delete)
 R [ ] Handle collections internally (enter)
 R [ ] Randomize playlist from a collection (playlist-random)
-  [ ] Command-line arguments are parsed as commands
 
-ADD TO SPECS?
+Other stuff:
 - other list modifiers than ENQUEUE: REPLACE, INSERT?
-- need to wait for result in all cases?
-
 - ignore and protect playlists starting with '_'
+- read the XMMS_PATH env var to open the server connection
 - When no metadata is present, display Title=filename
+- Free all the allocated memory, i.e. fix the leaks!
+- Correct display, using wcs instead of str?
