--- a/README
+++ b/README
@@ -1,3 +1,18 @@
                       ~~~  NYELLO  ~~~
 
-nyello ("singer" in Quenya) is a command-line XMMS2 client.
+nyello ("singer" in Quenya) is a command-line XMMS2 client.  It aims
+at providing a high-level interface to the XMMS2 server, with a
+concise and powerful interaction syntax.  It can either run a single
+command or work like a shell (if started without argument).  As a
+command-line program, it is mostly targetted at Unix power-users.
+
+The experience and work earned by developping nyello will then be used
+to develop a full-feature, more newbie-friendly graphical XMMS2
+client.  But that's in the future...
+
+Until then, enjoy the program and feel free to modify and redistribute
+it!
+
+
+If you have comments, feature requests, complaints or found a bug,
+drop me an email at seb@cine7.net
