--- a/TODO
+++ b/TODO
@@ -18,6 +18,8 @@
   ==> v0.1
 
   [X] Make result counter start at 0 and adapt sequences to match that
+  [X] Fix bug causing endless loop for "INFO +99"
+  [ ] Avoid invalid queries ("WHERE ()")
   [ ] Code cleanup, bugs, FIXME's (Printable class tree, playlist-list, etc)
   [ ] Improve help (command line -h and per-command)
   [+] Improve pattern features (orderby, comparators)
