--- a/TODO
+++ b/TODO
@@ -23,7 +23,7 @@
   [ ] Code cleanup, bugs, FIXME's (Printable class tree, playlist-list, etc)
   [ ] Improve help (command line -h and per-command)
   [+] Improve pattern features (orderby, comparators)
-  [ ] Fix operator bugs (NOT and XOR not working?)
+  [ ] Fix operator bugs (NOT and XOR not working at all)
   [ ] More commands (remove, status, clear, playlist-shuffle, filter)
   ==> v0.2
 
@@ -41,5 +41,3 @@ Other stuff:
   [ ] When no metadata is present, display Title=filename
   [ ] Free all the allocated memory, i.e. fix the leaks!
   [ ] Correct display, using wcs instead of str?
-  [ ] The NOT operator simply doesn't work at all (bad design)
-
