--- a/TODO
+++ b/TODO
@@ -21,12 +21,16 @@
   [X] Fix bug causing endless loop for "INFO +99"
   [X] Avoid invalid queries ("WHERE ()")
   [X] Fix sequence hack (problem with templates)
-  [ ] Code cleanup, bugs, FIXME's (Printable class tree, playlist-list, etc)
   [ ] Improve help (command line -h and per-command)
-  [+] Improve pattern features (orderby, comparators)
-  [ ] Fix operator bugs (NOT and XOR not working at all)
-  [ ] More commands (remove, status, clear, playlist-shuffle, filter)
+  [X] Improve pattern features (orderby)
+  [ ] Ignore and protect playlists starting with '_'
   ==> v0.2
+
+  [ ] Code cleanup, bugs, FIXME's (Printable class tree, playlist-list, etc)
+  [ ] Read the XMMS_PATH env var to open the server connection
+  [ ] Improve pattern features (order by rand(), comparators)
+  [ ] More commands (remove, status, clear, playlist-shuffle, filter)
+  ==> v0.3
 
   [ ] Make readline use async, redesign main-loop, remove waits
   [ ] Brainstorm on abstraction layer, make it reliable, dynamic (broadcast, etc)
@@ -36,10 +40,9 @@ R [ ] Design proper abstraction layer (all async events, current PL, collections
 R [ ] Handle collections internally (enter)
 R [ ] Randomize playlist from a collection (playlist-random)
 
-Other stuff:
-  [ ] Ignore and protect playlists starting with '_'
-  [ ] Read the XMMS_PATH env var to open the server connection
-  [ ] When no metadata is present, display Title=filename
-  [ ] Free all the allocated memory, i.e. fix the leaks!
+Unscheduled fixes (by order of importance, most important first)
   [ ] Correct display, using wcs instead of str?
+  [ ] Free all the allocated memory, i.e. fix the leaks!
   [ ] Should '#' match '1#0-' ?
+  [ ] When no metadata is present, display Title=filename
+  [ ] Fix operator bugs (NOT and XOR not working at all)
