--- a/TODO
+++ b/TODO
@@ -26,11 +26,11 @@
   [X] Ignore and protect playlists starting with '_'
   ==> v0.2
 
-  [ ] Allow escaped spaces and quoted string to be a single token
+  [X] Allow escaped spaces and quoted string to be a single token
   [ ] Code cleanup, bugs, FIXME's (Printable class tree, playlist-list, etc)
   [ ] Read the XMMS_PATH env var to open the server connection
   [ ] Improve pattern features (order by rand(), comparators)
-  [ ] More commands (remove, status, clear, playlist-shuffle, filter)
+  [ ] More commands (jump, remove, status, clear, playlist-shuffle, filter)
   ==> v0.3
 
   [ ] Make readline use async, redesign main-loop, remove waits
