--- a/TODO
+++ b/TODO
@@ -30,7 +30,7 @@
   [X] Allow escaped spaces and quoted string to be a single token
   [ ] Code cleanup, bugs, FIXME's (Printable class tree, playlist-list, etc)
   [X] Read the XMMS_PATH env var to open the server connection
-  [ ] Improve pattern features (order by rand())
+  [X] Improve pattern features (order by rand())
   [X] More commands (clear, shuffle, jump, status, remove)
   ==> v0.3
 
