--- a/TODO
+++ b/TODO
@@ -33,6 +33,7 @@
   [X] Improve pattern features (order by rand())
   [X] More commands (clear, shuffle, jump, status, remove)
   [X] Fixed parsing order bug (fixes "info -7")
+  [X] Fixed the playlist-list command that returned incorrect results
   ==> v0.3
 
   [ ] Make readline use async, redesign main-loop, remove waits
@@ -58,5 +59,4 @@ Unscheduled fixes (by order of importance, most important first)
 Known bugs
   [ ] "info 2 OR /" always returns an empty set, which is wrong (due to ORDER BY?)
   [ ] listing a playlist with just twice the same entry returns it only once
-  [ ] incorrect number of songs with PLAYLIST-LIST
   [ ] REMOVE can behave wrong if the active playlist and the matching saved playlist differ
