--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+Version 0.3.0
+(19 September 2005)
+
+	New features:
+	- Configure script, using autoconf/automake
+	- New commands: clear, shuffle, jump, status, remove
+	- Allow escaped spaces and quoted string to be a single token
+	- Reads the XMMS_PATH env var to open the server connection
+	- Order by random
+
+	Bug fixes:
+	- Important refactoring of the Printable tree, now using AbstractResult
+	- Parsing order bug (fixes "info -7")
+	- Erroneous playlist-list number of songs now correct
+	- Pattern syntax correction (now '#' matches '1#0-' indeed)
+	- Various cleanup, fixes and memory desallocation
+
 Version 0.2.0
 (13 September 2005)
 
