--- a/NEWS
+++ b/NEWS
@@ -1,1 +1,3 @@
-2005-08-31: v0.1.0  -  Initial release
+2005-09-19: v0.3.0  -  New features (configure, new commands, etc) and bug fixes.
+2005-09-13: v0.2.0  -  New features (orderby, command help) and bug fixes.
+2005-08-31: v0.1.0  -  Initial release.
